--- a/src/theme/common.less
+++ b/src/theme/common.less
@@ -32,3 +32,11 @@
         top: 50%;
     }
 }
+.app-ellipsis {
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    word-break: break-all;
+    word-wrap: break-word;
+}
